View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033149 | Open CASCADE | OCCT:Mesh | public | 2022-09-28 19:51 | 2023-03-19 22:48 |
Reporter | kgv | Assigned To | oan | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.7.0 | ||||
Target Version | 7.7.0 | Fixed in Version | 7.7.0 | ||
Summary | 0033149: Mesh - misprint in BRepMesh_NURBSRangeSplitter::computeGrainAndFilterParameters() | ||||
Description | The following new code #31853 looks having a misprint:- aMinDiff = Max(theParameters.MinSize, aMinDiff); + const Handle(BRepAdaptor_Surface)& aSurface = GetSurface(); + const Standard_Real aMinSize2d = Max( + aSurface->UResolution(theParameters.MinSize), + aSurface->UResolution(theParameters.MinSize)); + + aMinDiff = Max(aMinSize2d, aMinDiff); | ||||
Steps To Reproduce | Not needed | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33149 has been created by kgv. SHA-1: 43af3a3719f02d59595c5ac2e036f170ba4b06d1 Detailed log of new commits: Author: kgv Date: Wed Sep 28 19:56:48 2022 +0300 0033149: Mesh - misprint in BRepMesh_NURBSRangeSplitter::computeGrainAndFilterParameters() |
|
Branch CR33149 has been updated forcibly by oan. SHA-1: 18dcf84f84d535d21654c76effbfe69f50f77ddf |
|
Test reports: http://jenkins-test-occt/view/master-CR33149-OAN/view/COMPARE/ To integrate: OCCT: CR33149 PRODUCTS: CR33149 |
|
Branch CR33149 has been deleted by mnt. SHA-1: 18dcf84f84d535d21654c76effbfe69f50f77ddf |
occt: master f55fe3b3 2022-09-28 19:56:48 Committer: |
0033149: Mesh - misprint in BRepMesh_NURBSRangeSplitter::computeGrainAndFilterParameters() |
Affected Issues 0033149 |
|
mod - src/BRepMesh/BRepMesh_NURBSRangeSplitter.cxx | Diff File | ||
mod - tests/bugs/iges/buc60820_1 | Diff File | ||
mod - tests/bugs/iges/buc60820_2 | Diff File | ||
mod - tests/bugs/mesh/bug25287 | Diff File | ||
mod - tests/bugs/mesh/bug27384_2 | Diff File | ||
mod - tests/bugs/mesh/bug27845 | Diff File | ||
mod - tests/bugs/mesh/bug30008_1 | Diff File | ||
mod - tests/bugs/mesh/bug31251 | Diff File | ||
mod - tests/bugs/mesh/bug32424 | Diff File | ||
mod - tests/bugs/modalg_2/bug264_11 | Diff File | ||
mod - tests/bugs/moddata_2/bug428 | Diff File | ||
mod - tests/bugs/moddata_2/fra62476_1 | Diff File | ||
mod - tests/bugs/moddata_2/fra62476_2 | Diff File | ||
mod - tests/hlr/poly_hlr/bug23625_2 | Diff File | ||
mod - tests/hlr/poly_hlr/C13 | Diff File | ||
mod - tests/hlr/poly_hlr/C14 | Diff File | ||
mod - tests/hlr/poly_hlr/C16 | Diff File | ||
mod - tests/hlr/poly_hlr/C20 | Diff File | ||
mod - tests/hlr/poly_hlr/C5 | Diff File | ||
mod - tests/hlr/poly_hlr/C6 | Diff File | ||
mod - tests/hlr/poly_hlr/C7 | Diff File | ||
mod - tests/mesh/data/standard/X1 | Diff File | ||
occt-products: master 6ffe0db6 2022-10-04 12:53:12 Committer: |
0033149: Mesh - misprint in BRepMesh_NURBSRangeSplitter::computeGrainAndFilterParameters() Correct test cases |
Affected Issues 0033149 |
|
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - diff | Diff File | ||
mod - tests/bfit/loc_teapot/A1 | Diff File | ||
mod - tests/bfit/loc_teapot/A2 | Diff File | ||
mod - tests/bfit/loc_teapot/A4 | Diff File | ||
mod - tests/bfit/loc_teapot/B2 | Diff File | ||
mod - tests/bfit/loc_teapot/B4 | Diff File | ||
mod - tests/bfit/loc_teapot/C2 | Diff File | ||
mod - tests/bfit/loc_teapot/C3 | Diff File | ||
mod - tests/bfit/loc_teapot/C4 | Diff File | ||
mod - tests/bfit/loc_teapot/D2 | Diff File | ||
mod - tests/bfit/loc_teapot/E1 | Diff File | ||
mod - tests/bfit/loc_teapot/E2 | Diff File | ||
mod - tests/bfit/loc_teapot/E3 | Diff File | ||
mod - tests/bfit/loc_teapot/F3 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-09-28 19:51 | kgv | New Issue | |
2022-09-28 19:51 | kgv | Assigned To | => msv |
2022-09-28 19:56 | kgv | Category | OCCT:Modeling Algorithms => OCCT:Mesh |
2022-09-28 19:56 | kgv | Summary | Modeling Algorithms - misprint in BRepMesh_NURBSRangeSplitter::computeGrainAndFilterParameters() => Mesh - misprint in BRepMesh_NURBSRangeSplitter::computeGrainAndFilterParameters() |
2022-09-28 19:56 | git | Note Added: 0111302 | |
2022-09-29 00:26 |
|
Assigned To | msv => oan |
2022-09-29 00:26 |
|
Status | new => assigned |
2022-10-03 17:24 | git | Note Added: 0111340 | |
2022-10-04 13:27 | oan | Assigned To | oan => msv |
2022-10-04 13:27 | oan | Status | assigned => resolved |
2022-10-04 13:27 | oan | Steps to Reproduce Updated | |
2022-10-04 13:27 | oan | Note Added: 0111369 | |
2022-10-04 13:37 |
|
Assigned To | msv => bugmaster |
2022-10-04 13:37 |
|
Status | resolved => reviewed |
2022-11-02 13:40 |
|
Status | reviewed => tested |
2022-11-02 13:46 |
|
Changeset attached | => occt master f55fe3b3 |
2022-11-02 13:46 | kgv | Assigned To | bugmaster => kgv |
2022-11-02 13:46 | kgv | Status | tested => verified |
2022-11-02 13:46 | kgv | Resolution | open => fixed |
2022-11-02 13:53 | git | Note Added: 0111874 | |
2022-11-20 22:08 |
|
Changeset attached | => occt-products master 6ffe0db6 |
2022-11-20 22:08 | oan | Assigned To | kgv => oan |
2023-03-19 22:48 | vglukhik | Status | verified => closed |
2023-03-19 22:48 | vglukhik | Fixed in Version | => 7.7.0 |